--- a/doctor.html
+++ b/doctor.html
@@ -65,7 +65,7 @@
             <span id="patient-info-name-pres"></span>
         </div>
         <div class="region-2">
-            <p style="margin: 20px 20px 0px 20px;">病情描述</p>
+            <p style="margin: 20px 20px 0px 20px;">处方描述</p>
             <textarea id="pres-description-input" class="pres-description-input" placeholder="请输入处方"></textarea>
             <button id="pres-description-button" class="pres-description-button">创建处方</button>
         </div>
