--- a/html/patient.html
+++ b/html/patient.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>现代医疗健康系统</title>
-    <link rel="stylesheet" href="css/patient.css" type="text/css">
-    <script src="js/patient.js"></script>
+    <link rel="icon" type="image/x-ico" href="../rsrc/logo.png">
+    <link rel="stylesheet" href="../css/header.css" type="text/css">
+    <link rel="stylesheet" href="../css/patient.css" type="text/css">
+    <script src="../js/patient.js"></script>
 </head>
 <body>
 <header>
-    <p>欢迎来到现代医疗健康管理系统</p>
+    <a href="../index.html" id="header-flag" class="header-href">欢迎来到现代医疗健康管理系统</a>
     <ul>
-        <li><a href="login.html" id="header-login">登陆</a></li>
-        <li><a href="register.html" id="header-register">注册</a></li>
-        <li><a href="help.html" id="header-help">帮助</a></li>
+        <li><a href="login.html" id="header-login"  class="header-href">登录</a></li>
+        <li><a href="register.html" id="header-register"  class="header-href">注册</a></li>
+        <li><a href="../man/help-register.html" id="header-help"  class="header-href">帮助</a></li>
     </ul>
 </header>
 <div class="patient">
